# trustchain-py

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
benchmarks/: bench_blockstore.py  bench_crypto.py  bench_netflow.py  bench_protocol.py  bench_trust.py  data_gen.py  scale_simulation.py
docs/: quickstart.md
launch/: drafts.md
src/trustchain/: __init__.py  api.py  audit.py  behavioral.py  block.py  blockstore.py  chain.py  cli.py  collusion.py  consensus.py  correlation.py  crawler.py  delegation.py  exceptions.py  forgiveness.py  halfblock.py  identity.py  netflow.py  network.py  protocol.py  record.py  sanctions.py  sealed_rating.py  sidecar.py  store.py  thresholds.py  tiers.py  tools.py  trust.py
src/trustchain/grpc/: __init__.py  client.py  server.py  service.py
src/trustchain/integrations/: __init__.py  asgi.py  crewai.py  langchain.py  mcp.py
src/trustchain/proto/: __init__.py  serialization.py  trustchain.proto  (+1 more)
tests/: conftest.py  test_api.py  test_audit.py  test_behavioral.py  test_blockstore.py  test_chain.py  test_collusion.py  test_consensus.py  test_correlation.py  test_cross_validation.py  test_delegation.py  test_delegation_quota.py  test_discovery.py  test_forgiveness.py  test_grpc.py  test_halfblock.py  test_http3.py  test_netflow.py  test_protocol.py  test_quic_transport.py  test_requester_trust.py  test_sealed_rating.py  test_serialization.py  test_sidecar_payloads.py  test_transport.py  test_trust_legacy_precision.py  test_trust_v2.py
(+7 files in other folders)
